--- a/fishmall-coupon/src/main/resources/application.yml
+++ b/fishmall-coupon/src/main/resources/application.yml
@@ -3,7 +3,13 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://192.168.56.10:3306/fishmall_sms
-    driver-class-name: com.mysql.cj.jdbc.Driver    
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: fishmall-coupon
 mybatis-plus:
   mapper-location: classpath*:/mapper/**/*.xml
   global-config:
