--- a/fishmall-gateway/src/main/resources/application.yml
+++ b/fishmall-gateway/src/main/resources/application.yml
@@ -6,8 +6,18 @@ spring:
         uri: https://www.baidu.com
         predicates:
         - Query=url,baidu
+      
       - id: qq_route
         uri: https://www.qq.com
         predicates:
         - Query=url,qq
-          
+      
+      - id: admin_route
+        uri: lb://renren-fast
+        predicates:
+        - Path=/api/**
+        filters:
+        - RewritePath=/api/(?<segment>.*), /renren-fast/$\{segment}
+
+# 前端项目. /api        
+# GatewayFilter -> RewirtePath GatewayFilter Facotry
