--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -52,6 +52,16 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.yan.fishmall</groupId>
+			<artifactId>fishmall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
