--- a/fishmall-gateway/src/main/resources/application.yml
+++ b/fishmall-gateway/src/main/resources/application.yml
@@ -12,12 +12,21 @@ spring:
         predicates:
         - Query=url,qq
       
+      - id: product_route
+        uri: lb://fishmall-product
+        predicates:
+        - Path=/api/product/**
+        filters:
+        - RewritePath=/api/(?<segment>.*), /$\{segment}
+        
       - id: admin_route
         uri: lb://renren-fast
         predicates:
         - Path=/api/**
         filters:
         - RewritePath=/api/(?<segment>.*), /renren-fast/$\{segment}
+
+
 
 # 前端项目. /api        
 # GatewayFilter -> RewirtePath GatewayFilter Facotry
