--- a/fishmall-coupon/src/main/resources/application.yml
+++ b/fishmall-coupon/src/main/resources/application.yml
@@ -11,9 +11,9 @@
 #   application:
 #     name: fishmall-coupon
 # mybatis-plus:
-#   mapper-location: classpath*:/mapper/**/*.xml
+#   mapper-locations: classpath*:/mapper/**/*.xml
 #   global-config:
-#     db-confg:
+#     db-config:
 #       id-type: auto
 # server:
 #   port: 7000
