--- a/fishmall-member/src/main/resources/application.yml
+++ b/fishmall-member/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
   application:
     name: fishmall-member
 mybatis-plus:
-  mapper-location: classpath*:/mapper/**/*.xml
+  mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
-    db-confg:
+    db-config:
       id-type: auto
 server:
   port: 8000
