--- a/fishmall-product/src/main/resources/application.yml
+++ b/fishmall-product/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
   application:
     name: fishmall-product
 mybatis-plus:
-  mapper-location: classpath*:/mapper/**/*.xml
+  mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
-    db-confg:
+    db-config:
       id-type: auto
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
