--- a/fishmall-gateway/src/main/resources/application.yml
+++ b/fishmall-gateway/src/main/resources/application.yml
@@ -18,7 +18,15 @@ spring:
         - Path=/api/product/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
-        
+
+      - id: third_party_route
+        uri: lb://fishmall-third-party
+        predicates:
+          - Path=/api/thirdparty/**
+        filters:
+          - RewritePath=/api/thirdparty/(?<segment>.*), /$\{segment}
+
+
       - id: admin_route
         uri: lb://renren-fast
         predicates:
