--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>renren-generator</module>
         <module>fishmall-common</module>
         <module>fishmall-gateway</module>
+        <module>fishmall-third-party</module>
     </modules>
 </project>
