--- a/fishmall-gateway/src/main/resources/application.yml
+++ b/fishmall-gateway/src/main/resources/application.yml
@@ -2,15 +2,15 @@ spring:
   cloud:
     gateway:
       routes:
-      - id: test_route
-        uri: https://www.baidu.com
-        predicates:
-        - Query=url,baidu
-      
-      - id: qq_route
-        uri: https://www.qq.com
-        predicates:
-        - Query=url,qq
+#      - id: test_route
+#        uri: https://www.baidu.com
+#        predicates:
+#        - Query=url,baidu
+#
+#      - id: qq_route
+#        uri: https://www.qq.com
+#        predicates:
+#        - Query=url,qq
       
       - id: product_route
         uri: lb://fishmall-product
@@ -26,6 +26,12 @@ spring:
         filters:
           - RewritePath=/api/thirdparty/(?<segment>.*), /$\{segment}
 
+      - id: member_route
+        uri: lb://fishmall-member
+        predicates:
+          - Path=/api/member/**
+        filters:
+          - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: admin_route
         uri: lb://renren-fast
