ADD: add search module and add some search test cases (125,126,127)

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,6 @@
         <module>fishmall-common</module>
         <module>fishmall-gateway</module>
         <module>fishmall-third-party</module>
+        <module>fishmall-search</module>
     </modules>
 </project>
