--- a/fishmall-product/src/main/resources/application.yml
+++ b/fishmall-product/src/main/resources/application.yml
@@ -13,7 +13,10 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   thymeleaf:
-    cache: false
+    cache: true
+  redis:
+    host: 192.168.56.10
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
