--- a/fishmall-product/src/main/resources/application.yml
+++ b/fishmall-product/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   redis:
     host: 192.168.56.10
     port: 6379
+  cache:
+    type: redis
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
