--- a/fishmall-product/src/main/resources/application.yml
+++ b/fishmall-product/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     port: 6379
   cache:
     type: redis
+    redis:
+      time-to-live: 3600000
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
