--- a/fishmall-product/src/main/resources/application.yml
+++ b/fishmall-product/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     type: redis
     redis:
       time-to-live: 3600000
+#      key-prefix: CACHE_ #如果指定了前缀就用前缀，如果没有就默认使用缓存的名字
+      use-key-prefix: true
+      cache-null-values: true #是否缓存空值，防止缓存穿透
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
