--- a/fishmall-gateway/src/main/resources/application.yml
+++ b/fishmall-gateway/src/main/resources/application.yml
@@ -50,7 +50,12 @@ spring:
       - id: fishmall_host_route
         uri: lb://fishmall-product
         predicates:
-          - Host=**.fishmall.com
+          - Host=fishmall.com
+
+      - id: fishmall_search_route
+        uri: lb://fishmall-search
+        predicates:
+          - Host=search.fishmall.com
 
 # 前端项目. /api        
 # GatewayFilter -> RewirtePath GatewayFilter Facotry
